VFS-3136 Sidebar title alignment fix.

--- a/src/app/styles/one-sidebar.scss
+++ b/src/app/styles/one-sidebar.scss
@@ -2,6 +2,8 @@
   .row-heading {
     .col-title {
       padding: $one-sidebar-item-padding;
+      padding-top: 40px;
+      padding-bottom: 40px;
       font-family: 'Open Sans Semibold';
       line-height: initial;
     }
